src/test/ui/derives/derives-span-Ord-struct.stderr
error[E0277]: the trait bound `Error: Ord` is not satisfied
  --> $DIR/derives-span-Ord-struct.rs:8:5
   |
LL |     x: Error
   |     ^^^^^^^^ the trait `Ord` is not implemented for `Error`
   |
   = note: required by `std::cmp::Ord::cmp`
   = note: this error originates in the derive macro `Ord` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
